# rubiks-solver

./: .gitignore  CMakeLists.txt  README.md
include/rubik/: cube.hpp  types.hpp
